assets/deployments/media/media-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: media
  name: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      nodeSelector:
        app: app
      containers:
        - image: 279559645400.dkr.ecr.us-west-1.amazonaws.com/solui/media:G8R2i020
          imagePullPolicy: Always
          name: media
          ports:
            - containerPort: 5031
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /media/health
              port: 5031
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          resources: {}
          volumeMounts:
            - mountPath: /opt/ibaset/solumina-web-media/config/.env
              subPath: .env
              name: media-mount

      volumes:
        - name: media-mount
          configMap:
            name: media-cm
            defaultMode: 420
            items:
              - key: mediaConfig
                path: .env

      restartPolicy: Always
status: {}
