assets/deployments/media/media-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: media
  name: media
spec:
  ports:
  - name: "5031"
    port: 5031
    targetPort: 5031
  selector:
    app: media
#  externalIPs:
#   - 10.10.9.248
#status:
#  loadBalancer: {}
